changement de qualité implémenté pour les vidéos

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -17,7 +17,8 @@
   <link rel="stylesheet" href="{% static 'style.css' %}" />
    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" />
    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.1.1/css/responsive.bootstrap4.min.css" />
-   
+   <link href="http://vjs.zencdn.net/6.2.7/video-js.css" rel="stylesheet">
+   <link href="{% static 'admin/css/videojs-qualityselector.css'%}"  rel="stylesheet">
 
        
 
@@ -256,6 +257,8 @@
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.1.1/js/dataTables.responsive.min.js"></script>
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.1.1/js/responsive.bootstrap4.min.js"></script>
 
+        
+        
 
 
 
