--- a/videos/templates/edit_video.html
+++ b/videos/templates/edit_video.html
@@ -25,9 +25,25 @@
   </tr>
 
   <tr>
-    <th class="col1">   <label  for="url">URL :<label> </th>
-    <th>  <input class="input_edit" id="url" size="100" type="text" name="url" value="{{v.url}}" onfocus="ffocus('url')" onblur="defocus('url')"/></th>
+    <th class="col1">   <label  for="hd">HD :<label> </th>
+    <th>  <input class="input_edit" id="hd" size="100" type="text" name="hd" value="{{v.hd}}" onfocus="ffocus('hd')" onblur="defocus('hd')"/></th>
   </tr>
+
+  <tr>
+    <th class="col1">   <label  for="md">md :<label> </th>
+    <th>  <input class="input_edit" id="md" size="100" type="text" name="md" value="{{v.md}}" onfocus="ffocus('md')" onblur="defocus('md')"/></th>
+  </tr>
+
+  <tr>
+    <th class="col1">   <label  for="sd">sd :<label> </th>
+    <th>  <input class="input_edit" id="sd" size="100" type="text" name="sd" value="{{v.sd}}" onfocus="ffocus('sd')" onblur="defocus('sd')"/></th>
+  </tr>
+
+  <tr>
+    <th class="col1">   <label  for="screenshot">screenshot :<label> </th>
+    <th>  <input class="input_edit" id="screenshot" size="100" type="text" name="screenshot" value="{{v.screenshot}}" onfocus="ffocus('screenshot')" onblur="defocus('screenshot')"/></th>
+  </tr>
+
 
 
 
