--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -384,7 +384,7 @@ var playlist = []
 var tags = [];
 {% for r in proj.relation_proj_set.all %}
 
-    playlist[{{ forloop.counter }}] = ['{{ r.video.titre }}', '{{r.video.url}}', '{{r.video|auteurs|striptags}}', '{{r.video.id}}',{{r.ordre}}]
+    playlist[{{ forloop.counter }}] = ['{{ r.video.titre }}', '{{r.video.hd}}', '{{r.video|auteurs|striptags}}', '{{r.video.id}}',{{r.ordre}}]
 
     x = [];
 	{% for r2 in r.video.relation_tag_set.all %}
