--- a/videos/templates/search.html
+++ b/videos/templates/search.html
@@ -76,7 +76,7 @@
 	<div class="search_bloc_video">
 		<a href="{% url 'video' v.id %}">
 		<figure class="figure_liste">
-				<img class="img_vid" src="{{v.url}}.png"/>
+				<img class="img_vid" src="{{v.screenshot}}"/>
 				<figcaption class="legende_vid_duree">
 						{{v|duration}}
 				</figcaption>
